--- a/Shope/Views/Customers/Create.cshtml
+++ b/Shope/Views/Customers/Create.cshtml
@@ -38,10 +38,20 @@
                 <span asp-validation-for="NumberHome" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
-    </div>
+</div>
 </div>
 
 <div>
