doron: add admin view

--- a/Shope/Views/Home/Index.cshtml
+++ b/Shope/Views/Home/Index.cshtml
@@ -3,4 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<a href="~/Products/Create">הרשמה</a>
+<a href="~/Customers/Create">הרשמה</a>
+
+<a href="~/Customers/Login">התחברות</a>
+
