--- a/Shope/Views/Customers/Login.cshtml
+++ b/Shope/Views/Customers/Login.cshtml
@@ -11,8 +11,9 @@
     <p>
         password: <input type="text" placeholder="Enter your pasword" name="password" />
     </p>
-    <a class="btn btn-info btn-lg">
+    <input type="submit" />
+    @*<a class="btn btn-info btn-lg">
         <span class="glyphicon glyphicon-log-out"></span> Log in
-    </a>
+    </a>*@
 </form>
 
