--- a/Shope/Views/Customers/Details.cshtml
+++ b/Shope/Views/Customers/Details.cshtml
@@ -40,6 +40,13 @@
         <dd>
             @Html.DisplayFor(model => model.NumberHome)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsAdmin)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.IsAdmin)
+        </dd>
     </dl>
 </div>
 <div>
