--- a/Shope/Views/Customers/Index.cshtml
+++ b/Shope/Views/Customers/Index.cshtml
@@ -48,6 +48,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Password)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsAdmin)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -75,6 +78,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Password)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsAdmin)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
