doron: add sign up form

--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     {
                         <li>@Html.ActionLink("Home", "Index", "Products")</li>
                     <li>@Html.ActionLink("Login", "Login", "Customers")</li>
-                    <li>@Html.ActionLink("Register", "Create", "Customers")</li>
+                    <li>@Html.ActionLink("Register", "Register", "Customers")</li>
                     @*<li>@Html.ActionLink("Products", "Index", "Products")</li>*@
                     }
                     @if (Global.Admin == 2)
