--- a/Shope/Views/Customers/Delete.cshtml
+++ b/Shope/Views/Customers/Delete.cshtml
@@ -41,6 +41,12 @@
         <dd>
             @Html.DisplayFor(model => model.NumberHome)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsAdmin)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.IsAdmin)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
