doron: add more searches in products view           define user session id for every connection

--- a/Shope/Views/Products/Index.cshtml
+++ b/Shope/Views/Products/Index.cshtml
@@ -17,14 +17,26 @@
 <form asp-contoller="Product" asp-action="index">
     <p>
         שם המוצר:<input type="text" name="name" />
-        <input type="submit" value="filter" />
+        <input type="submit" value="חיפוש" />
     </p>
 </form>
 <form asp-contoller="Product" asp-action="index">
     <p>
         עד מחיר:<input type="text" name="price" />
-        <input type="submit" value="filter" />
+        <input type="submit" value="חיפוש" />
     </p>
+</form>
+<form asp-contoller="Product" asp-action="index">
+    <p>
+        ממחיר:<input type="text" name="OfThePrice" />
+        <input type="submit" value="חיפוש" />
+    </p>
+</form>
+<form asp-contoller="Product" asp-action="index">
+<p>
+    צבע:<input type="text" name="color" />
+    <input type="submit" value="חיפוש" />
+</p>
 </form>
 <table class="table">
     <thead>
