--- a/Shope/Views/Shared/_Layout.cshtml
+++ b/Shope/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                         <li>@Html.ActionLink("User Purchases Report", "UserReports", "Orders")</li>
                         <li>@Html.ActionLink("Products Sold Report", "ProductsReports", "Orders")</li>
                         <li>@Html.ActionLink("Addresses Store", "Index", "Addresses")</li>
-                        <li>@Html.ActionLink("Logout", "Login", "Customers")</li>
+                        <li>@Html.ActionLink("Logout", "Logout", "Customers")</li>
                     }
 
                     @if (Global.Admin == 1)
@@ -60,7 +60,7 @@
                         <li>@Html.ActionLink("User Purchases Report", "UserReports", "Orders")</li>
                         @*<li>@Html.ActionLink("Products Sold Report", "ProductsReports", "Orders")</li>
             <li>@Html.ActionLink("Addresses Store", "Index", "Addresses")</li>*@
-                        <li>@Html.ActionLink("Logout", "Login", "Customers")</li>
+                        <li>@Html.ActionLink("Logout", "Logout", "Customers")</li>
                     }
 
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
