add connection to facebook and twitter fix some bugs

--- a/Shope/Views/Customers/Login.cshtml
+++ b/Shope/Views/Customers/Login.cshtml
@@ -238,7 +238,7 @@ span.psw {
 
         <div class="container-fluid" style="background-color:#f1f1f1">
             <button type="button" class="cancelbtn">Cancel</button>
-            <span class="psw">Forgot <a href="#">password?</a></span>
+            <span class="psw"> <a href="~/Customers/Register">Register</a></span>
         </div>
     </form>
 
