--- a/Shope/Views/Customers/Register.cshtml
+++ b/Shope/Views/Customers/Register.cshtml
@@ -72,8 +72,14 @@ button:hover {
 <body>
     <form asp-contoller="Customer" asp-action="Register">
         <div class="container">
-            <h1>Sign Up</h1>
+            <div>
+                <h1>Sign Up</h1>
+            </div>
+            <div class="right">
+        <a href="~/Customers/Login" style="float: right;">התחברות</a>
+        </div>
             <p>Please fill in this form to create an account.</p>
+
             <hr>
 
             <label for="email"><b>Email</b></label>
