--- a/Shope/Views/Products/Payment.cshtml
+++ b/Shope/Views/Products/Payment.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Shope.Models.Order
 @{
     ViewData["Title"] = "Payment";
 }
@@ -9,101 +9,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-body {
-  font-family: Arial;
-  font-size: 17px;
-  padding: 8px;
-}
+        body {
+            font-family: Arial;
+            font-size: 17px;
+            padding: 8px;
+        }
 
-* {
-  box-sizing: border-box;
-}
+        * {
+            box-sizing: border-box;
+        }
 
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-  margin: 0 -16px;
-}
+        .row {
+            display: -ms-flexbox; /* IE10 */
+            display: flex;
+            -ms-flex-wrap: wrap; /* IE10 */
+            flex-wrap: wrap;
+            margin: 0 -16px;
+        }
 
-.col-25 {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
-}
+        .col-25 {
+            -ms-flex: 25%; /* IE10 */
+            flex: 25%;
+        }
 
-.col-50 {
-  -ms-flex: 50%; /* IE10 */
-  flex: 50%;
-}
+        .col-50 {
+            -ms-flex: 50%; /* IE10 */
+            flex: 50%;
+        }
 
-.col-75 {
-  -ms-flex: 75%; /* IE10 */
-  flex: 75%;
-}
+        .col-75 {
+            -ms-flex: 75%; /* IE10 */
+            flex: 75%;
+        }
 
-.col-25,
-.col-50,
-.col-75 {
-  padding: 0 16px;
-}
+        .col-25,
+        .col-50,
+        .col-75 {
+            padding: 0 16px;
+        }
 
-.container {
-  background-color: #f2f2f2;
-  padding: 5px 20px 15px 20px;
-  border: 1px solid lightgrey;
-  border-radius: 3px;
-}
+        .container {
+            background-color: #f2f2f2;
+            padding: 5px 20px 15px 20px;
+            border: 1px solid lightgrey;
+            border-radius: 3px;
+        }
 
-input[type=text] {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-}
+        input[type=text] {
+            width: 100%;
+            margin-bottom: 20px;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
 
-label {
-  margin-bottom: 10px;
-  display: block;
-}
+        label {
+            margin-bottom: 10px;
+            display: block;
+        }
 
-.icon-container {
-  margin-bottom: 20px;
-  padding: 7px 0;
-  font-size: 24px;
-}
+        .icon-container {
+            margin-bottom: 20px;
+            padding: 7px 0;
+            font-size: 24px;
+        }
 
-.btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px;
-  margin: 10px 0;
-  border: none;
-  width: 100%;
-  border-radius: 3px;
-  cursor: pointer;
-  font-size: 17px;
-}
+        .btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 12px;
+            margin: 10px 0;
+            border: none;
+            width: 100%;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 17px;
+        }
 
-.btn:hover {
-  background-color: #45a049;
-}
+            .btn:hover {
+                background-color: #45a049;
+            }
 
-a {
-  color: #2196F3;
-}
+        a {
+            color: #2196F3;
+        }
 
-hr {
-  border: 1px solid lightgrey;
-}
+        hr {
+            border: 1px solid lightgrey;
+        }
 
-span.price {
-  float: right;
-  color: grey;
-}
-
-
+        span.price {
+            float: right;
+            color: grey;
+        }
     </style>
 </head>
 <body>
@@ -113,7 +111,7 @@ span.price {
     <div class="row">
         <div class="col-75">
             <div class="container">
-                <form action="/action_page.php">
+                <form asp-contoller="Products" asp-action="CreateAuto">
 
                     <div class="row">
                         <div class="col-50">
@@ -170,16 +168,17 @@ span.price {
                     <label>
                         <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
                     </label>
-                    <input type="submit" name="Orders.Create" class="btn">
+                    <input type="submit" class="btn">
                 </form>
             </div>
         </div>
         <div class="col-25">
             <div class="container">
                 <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>@Global.CurrentCart.Products.Count</b></span></h4>
-                <p><a href="cart">רשימת המוצרים שלך</a> 
-                
-                <hr>
+                <p>
+                    <a href="cart">רשימת המוצרים שלך</a>
+
+                    <hr>
                 <p>Total <span class="price" style="color:black"><b>@Global.CurrentCart.TotalAmount</b></span></p>
             </div>
         </div>
