--- a/Shope/Views/Customers/Register.cshtml
+++ b/Shope/Views/Customers/Register.cshtml
@@ -1,125 +1,91 @@
-﻿
+﻿@model IEnumerable<Shope.Models.Customer>
 @{
     ViewData["Title"] = "Register";
 }
-
 <!DOCTYPE html>
-<html>
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box}
 
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
-}
+<head>
+    <title>הרשמה</title>
 
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
+    <style>
+        /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+        .row.content {
+            height: 750px
+        }
 
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
+        /* Set gray background color and 100% height */
+        .sidenav {
+            background-color: #f1f1f1;
+  
+            height: 100%;
+        }
 
-/* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
-}
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 15px;
+        }
 
-button:hover {
-  opacity:1;
-}
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-  padding: 14px 20px;
-  background-color: #f44336;
-}
-
-/* Float cancel and signup buttons and add an equal width */
-.cancelbtn, .signupbtn {
-  float: left;
-  width: 50%;
-}
-
-/* Add padding to container elements */
-.container {
-  padding: 16px;
-}
-
-/* Clear floats */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-</style>
+    </style>
+</head>
 <body>
-    <form asp-contoller="Customer" asp-action="Register">
-        <div class="container">
-            <div>
-                <h1>Sign Up</h1>
+    <div class="container">
+        <div class="container-fluid">
+            <div class="row content">
+                <div class="col-sm-3 sidenav">
+                    <ul>
+                        <li>
+                            <br />
+                            <br />
+                            <h3>אנא הזן פרטים</h3>
+                            <form asp-contoller="Customer" asp-action="Register">
+
+                                <label for="email"><b>Email</b></label>
+                                <input type="text" placeholder="Enter Email" name="email" required>
+
+                                <label for="pssword"><b>Password</b></label>
+                                <input type="password" placeholder="Enter Password" name="password" required>
+
+                                <label for="psw-repeat"><b>Repeat Password</b></label>
+                                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
+                                <label for="fname"><b>First Name</b></label>
+                                <input type="text" placeholder="Enter f name" name="fname" required>
+
+                                <label for="Lnam"><b>Last Name</b></label>
+                                <input type="text" placeholder="Enter l name" name="Lnam" required><br />
+
+                                <label for="city"><b>City</b></label><br />
+                                <input type="text" placeholder="Enter city" name="city" required>
+
+                                <label for="street"><b>Street</b></label>
+                                <input type="text" placeholder="Enter street" name="street" required>
+
+                                <label for="NumberHome"><b>Home Number</b></label>
+                                <input type="text" placeholder="Enter home number" name="NumberHome" required>
+
+                                <label>
+                                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+                                </label>
+
+                                <div class="clearfix">
+                                    <button type="button" class="cancelbtn">Cancel</button>
+                                    <button type="submit" class="signupbtn">Sign Up</button>
+                                </div>
+                            </form>
+
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-9">
+                    <h4><small>RECENT POSTS</small></h4>
+                    <img src="~/images/טבעת 1.jpg" alt="Girl in a jacket" width="700" height="600">
+                </div>
             </div>
-            <div class="right">
-        <a href="~/Customers/Login" style="float: right;">התחברות</a>
         </div>
-            <p>Please fill in this form to create an account.</p>
-
-            <hr>
-
-            <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
-
-            <label for="pssword"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" required>
-
-            <label for="psw-repeat"><b>Repeat Password</b></label>
-            <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-            <label for="fname"><b>First Name</b></label>
-            <input type="text" placeholder="Enter f name" name="fname" required>
-
-            <label for="Lnam"><b>Last Name</b></label>
-            <input type="text" placeholder="Enter l name" name="Lnam" required>
-
-            <label for="city"><b>City</b></label>
-            <input type="text" placeholder="Enter city" name="city" required>
-
-            <label for="street"><b>Street</b></label>
-            <input type="text" placeholder="Enter street" name="street" required>
-
-            <label for="NumberHome"><b>Home Number</b></label>
-            <input type="text" placeholder="Enter home number" name="NumberHome" required>
-
-            <label>
-                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-            </label>
-
-            <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-            <div class="clearfix">
-                <button type="button" class="cancelbtn">Cancel</button>
-                <button type="submit" class="signupbtn">Sign Up</button>
-            </div>
-        </div>
-        </form>
-
+    </div>
 </body>
-</html>
+
 
 
