view->costumer->Register

--- a/Shope/Views/Customers/Register.cshtml
+++ b/Shope/Views/Customers/Register.cshtml
@@ -8,6 +8,7 @@
     <title>הרשמה</title>
 
     <style>
+        body.col-sm-9{background-color:khaki}
         /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
         .row.content {
             height: 750px
@@ -79,7 +80,7 @@
                     </ul>
                 </div>
                 <div class="col-sm-9">
-                    <h4><small>RECENT POSTS</small></h4>
+                    
                     <img src="~/images/טבעת 1.jpg" alt="Girl in a jacket" width="700" height="600">
                 </div>
             </div>
