--- a/Shope/Views/Products/Create.cshtml
+++ b/Shope/Views/Products/Create.cshtml
@@ -8,7 +8,8 @@
 
 <h4>Product</h4>
 <hr />
-<div class="row">
+<div class="row" style="margin-top:20px;">
+    @*<div class="col-md-4"></div>*@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -37,7 +38,13 @@
                 <input asp-for="Unit" class="form-control" />
                 <span asp-validation-for="Unit" class="text-danger"></span>
             </div>
-          
+            <div class="form-group">
+                <label asp-for="Image" class="control-label"></label>
+                <input asp-for="Image" class="form-control" />
+                <span asp-validation-for="Image" class="text-danger"></span>
+            </div>
+
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
